# erik

./: .gitignore  Dockerfile  erik.py  main.py  pyproject.toml
.github/workflows/: build-docker.yml
bot/: erik.py  utils.py
bot/commands/: games.py  github.py  minecraft.py  urbandict.py
