[tool.poetry]
name = "erik"
version = "0.1.0"
description = ""
authors = ["teaishealthy <teaishealthy@protonmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
mcstatus = "^9.4.2"
"eludris.py" = {git = "https://github.com/teaishealthy/eludris.py"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
